Pull up following revision(s) (requested by riastradh in ticket #413):

sys/dev/usb/if_ure.c: revision 1.59

ure(4): Set all bits, not no bits, in multicast filter for promisc.
This was lost in revision 1.40.
PR kern/57648